# some-berries

./: .env.example  .gitignore  Dockerfile  README.md  berries.py  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  pytest.ini
berries_client/: __init__.py  berries_client.py
poke_berries/: api.py  berries.py  serializers.py
templates/: plot_page.html
tests/: conftest.py  test_api.py
tests/integration/: test_api.py
tests/unit/: test_berries.py
utils/: logger.py
