[project]
name = "berries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
